# pokemon-tcg-ai-battle

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: download_competition.sh  package_submission.sh
src/ptcg_battle/decks/: lucario_variants.py
tests/: test_deck_variants.py
